--- a/trunk/SmartMarathon.App/SmartMarathon.App.csproj
+++ b/trunk/SmartMarathon.App/SmartMarathon.App.csproj
@@ -186,19 +186,26 @@
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\addtohomescreen.css" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\images\favicon.png" />
+    <Content Include="Content\images\running_man_logo.jpg" />
+    <Content Include="Content\images\running_man_logo_inverted.jpg" />
+    <Content Include="Content\images\startup.png" />
     <Content Include="favicon.ico" />
+    <Content Include="favicon_inverted.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
-    <Content Include="Content\Site.css" />
+    <Content Include="Content\site.css" />
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
     <Content Include="fonts\glyphicons-halflings-regular.ttf" />
     <Content Include="fonts\glyphicons-halflings-regular.eot" />
     <Content Include="Content\bootstrap-theme.css.map" />
     <Content Include="Content\bootstrap.css.map" />
+    <Content Include="Scripts\addtohomescreen.min.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="marathons.json" />
