Add support to other distances: Half Marathon and 30K Improve user interaction

--- a/SmartMarathon.App/SmartMarathon.App.csproj
+++ b/SmartMarathon.App/SmartMarathon.App.csproj
@@ -169,11 +169,13 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="App_Code\SmartMarathon.cs" />
+    <Compile Include="Code\EnumExtensions.cs" />
+    <Compile Include="Code\SmartMarathon.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
+    <Compile Include="Code\SplitsManager.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
@@ -241,12 +243,15 @@
     </Content>
     <Content Include="Content\images\header-bg.webp" />
     <None Include="Properties\PublishProfiles\smartmarathon.pubxml" />
+    <None Include="Properties\PublishProfiles\smartmarathontest.pubxml" />
     <None Include="Scripts\jquery-2.1.1.intellisense.js" />
     <Content Include="Scripts\classie.js" />
     <Content Include="Scripts\jquery-2.1.1.js" />
     <Content Include="Scripts\jquery-2.1.1.min.js" />
     <Content Include="Scripts\jquery-2.1.1.min.map" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
+    <Content Include="Scripts\jquery.unobtrusive-ajax.js" />
+    <Content Include="Scripts\jquery.unobtrusive-ajax.min.js" />
     <Content Include="Scripts\jquery.validate.js" />
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
@@ -286,8 +291,10 @@
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Shared\EditorTemplates\Split.cshtml" />
     <Content Include="Views\Shared\EditorTemplates\Splits.cshtml" />
+    <Content Include="Views\Home\Splits.cshtml" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="App_Code\" />
     <Folder Include="App_Data\" />
     <Folder Include="Views\Shared\DisplayTemplates\" />
   </ItemGroup>
