--- a/trunk/SmartMarathon.App/SmartMarathon.App.csproj
+++ b/trunk/SmartMarathon.App/SmartMarathon.App.csproj
@@ -186,6 +186,11 @@
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -195,13 +200,17 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\font-awesome.min.css" />
+    <Content Include="Content\images\arrow-down.gif" />
     <Content Include="Content\images\favicon.png" />
+    <Content Include="Content\images\flags\cr.png" />
+    <Content Include="Content\images\flags\us.png" />
     <Content Include="Content\images\header-bg.jpg" />
     <Content Include="Content\images\running_man_logo.jpg" />
     <Content Include="Content\images\running_man_logo_bktransparent.png" />
     <Content Include="Content\images\running_man_logo_inverted.jpg" />
     <Content Include="Content\images\startup.png" />
     <Content Include="Content\main.css" />
+    <Content Include="Content\polyglot-language-switcher.css" />
     <Content Include="favicon.ico" />
     <Content Include="favicon_inverted.ico" />
     <Content Include="fonts\fontawesome-webfont.svg">
@@ -251,6 +260,8 @@
     <Content Include="Scripts\jquery-2.1.1.min.js" />
     <Content Include="Scripts\jquery-2.1.1.min.map" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
+    <Content Include="Scripts\jquery.cookie.js" />
+    <Content Include="Scripts\jquery.polyglot.language.switcher.js" />
     <Content Include="Scripts\jquery.unobtrusive-ajax.js" />
     <Content Include="Scripts\jquery.unobtrusive-ajax.min.js" />
     <Content Include="Scripts\jquery.validate.js" />
@@ -303,6 +314,13 @@
   <ItemGroup>
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Resources.es.resx" />
+    <EmbeddedResource Include="Resources.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
