Imolement External Calculator

--- a/SmartMarathon.App/SmartMarathon.App.csproj
+++ b/SmartMarathon.App/SmartMarathon.App.csproj
@@ -15,11 +15,12 @@
     <AssemblyName>SmartMarathon.App</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <MvcBuildViews>false</MvcBuildViews>
-    <UseIISExpress>false</UseIISExpress>
+    <UseIISExpress>true</UseIISExpress>
     <IISExpressSSLPort />
     <IISExpressAnonymousAuthentication />
     <IISExpressWindowsAuthentication />
     <IISExpressUseClassicPipelineMode />
+    <UseGlobalApplicationHostFile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -245,6 +246,8 @@
     <Content Include="Content\bootstrap-theme.css.map" />
     <Content Include="Content\bootstrap.css.map" />
     <None Include="Properties\PublishProfiles\smartmarathon.pubxml" />
+    <None Include="Properties\PublishProfiles\smartmarathontest - FTP.pubxml" />
+    <None Include="Properties\PublishProfiles\smartmarathontest - Web Deploy.pubxml" />
     <None Include="Properties\PublishProfiles\smartmarathontest.pubxml" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
@@ -272,6 +275,8 @@
     <Content Include="Scripts\smartmarathon.js" />
     <Content Include="Scripts\smoothscroll.js" />
     <Content Include="Scripts\_references.js" />
+    <Content Include="Test2.html" />
+    <Content Include="Test.html" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -300,6 +305,8 @@
     <Content Include="Views\Shared\EditorTemplates\Splits.cshtml" />
     <Content Include="Views\Home\Splits.cshtml" />
     <Content Include="Views\Shared\EditorTemplates\TimeSpan.cshtml" />
+    <Content Include="Views\Home\Calculator - Copy.cshtml" />
+    <Content Include="Views\Home\Calculator.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Code\" />
@@ -334,11 +341,11 @@
     <VisualStudio>
       <FlavorProperties GUID="{349c5851-65df-11da-9384-00065b846f21}">
         <WebProjectProperties>
-          <UseIIS>True</UseIIS>
+          <UseIIS>False</UseIIS>
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>56090</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost/SmartMarathonApp</IISUrl>
+          <IISUrl>http://localhost:56090/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
