--- a/SmartMarathon.IonicApp/bower.json
+++ b/SmartMarathon.IonicApp/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "ionic-sidemenu",
+  "name": "smart-marathon",
   "private": true,
   "devDependencies": {
     "ionic": "driftyco/ionic-bower#1.2.4"
