--- a/SmartMarathon.IonicApp/bower.json
+++ b/SmartMarathon.IonicApp/bower.json
@@ -2,6 +2,7 @@
   "name": "smart-marathon",
   "private": true,
   "devDependencies": {
-    "ionic": "driftyco/ionic-bower#1.2.4"
+    "ionic": "driftyco/ionic-bower#1.2.4",
+    "ng-storage": "^0.4.2"
   }
 }
